Add styling to cards

--- a/styles.css
+++ b/styles.css
@@ -193,14 +193,6 @@
     margin-block-start: var(--flow-space, 1em);
   }
 
-  .grid-flow {
-    display: grid;
-    gap: var(--grid-flow-gap, 1rem);
-
-    align-content: start;
-    justify-items: start;
-  }
-
   .equal-columns {
     display: grid;
     gap: var(--equal-columns-gap, 1rem);
@@ -271,6 +263,22 @@
 }
 
 @layer components {
+  .card__title {
+    color: var(--card-title-color, var(--text-brand));
+    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
+  }
+
+  .card {
+    display: grid;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
   .hero {
     text-align: center;
     background-image: url(/assets/hero.webp);
