--- a/styles.css
+++ b/styles.css
@@ -263,22 +263,6 @@
 }
 
 @layer components {
-  .card__title {
-    color: var(--card-title-color, var(--text-brand));
-    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
-  }
-
-  .card {
-    display: grid;
-    gap: 1rem;
-    padding: 1rem;
-    background-color: var(--background-light);
-    border-radius: var(--border-radius-3);
-
-    img {
-      border-radius: var(--border-radius-2);
-    }
-  }
   .hero {
     text-align: center;
     background-image: url(/assets/hero.webp);
@@ -312,6 +296,64 @@
       flex-wrap: wrap;
       gap: 2rem;
     }
+  }
+
+  .card__title {
+    color: var(--card-title-color, var(--text-brand));
+    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
+  }
+
+  .card {
+    display: grid;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
+  .button {
+    display: inline-flex;
+    cursor: pointer;
+    font-family: var(--ff-heading);
+    font-weight: 700;
+    font-size: var(--font-size-md);
+    text-decoration: none;
+    background-color: var(--background-accent-main);
+    padding: 0.5rem 1rem;
+    border-radius: var(--border-radius-1);
+  }
+
+  .button:hover,
+  .button:focus-visible {
+    background: var(--background-accent-light);
+    color: var(--text-high-contrast);
+  }
+
+  .site-footer {
+    background-color: var(--background-dark);
+    padding-block: 2rem;
+    text-align: center;
+
+    display: grid;
+    gap: 2rem;
+
+    a {
+      text-decoration: none;
+      color: var(--text-main);
+
+      &:hover,
+      &:focus-visible {
+        color: var(--text-brand-light);
+      }
+    }
+  }
+  .site-footer__title {
+    font-size: var(--font-size-);
+    font-family: var(--ff-heading);
+    font-weight: 700;
   }
 }
 
