Match the style to the original repo

--- a/styles.css
+++ b/styles.css
@@ -290,60 +290,68 @@
     justify-content: space-between;
   }
 
-  [aria-controls="primary-nav"] {
-    /* display: block; */
-    z-index: 100;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    /* display: none; */
-
-    img {
-      border-radius: 0;
-    }
-  }
-
   .primary-navigation {
     ul {
+      list-style: none;
       margin: 0;
       padding: 0;
-      list-style: none;
       display: flex;
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: 0.5rem 2rem;
     }
 
     a {
       text-decoration: none;
     }
+  }
 
-    @media (width < 760px) {
-      background-color: var(--background-accent-main);
+  [aria-controls="primary-navigation"] {
+    display: none;
+  }
+
+  @media (width < 760px) {
+    [aria-controls="primary-navigation"] {
+      display: block;
+      z-index: 100;
+      background: transparent;
+      border: 0;
+
+      img {
+        border-radius: 0;
+      }
+    }
+
+    .site-header {
+      position: relative;
+    }
+
+    .primary-navigation {
+      display: none;
       position: absolute;
+      z-index: 10;
       top: 0;
       right: 0;
-      font-size: var(--font-size-lg);
-      font-weight: 700;
-      font-family: var(--ff-heading);
       padding: 2rem;
       border-radius: 0 0 0 var(--border-radius-3);
+      background: var(--background-accent-main);
 
       ul {
-        gap: 0;
         flex-direction: column;
+        gap: 0;
+        font-size: var(--fs-700);
+        font-family: var(--ff-heading);
+        font-weight: 700;
       }
 
-      /* Next applies lines the last 2 elements of the list */
       li + li {
-        /* background-color: red; */
-        margin-block-start: 1.5rem;
-        padding-block-start: 1.5rem;
+        margin-top: 1rem;
+        padding-top: 1rem;
         border-top: 2px solid var(--background-accent-light);
       }
-      /* .primary-navigation {
-        position: absolute;
-        flex-direction: column;
-      } */
+    }
+
+    [aria-expanded="true"] ~ .primary-navigation {
+      display: block;
     }
   }
 
